DIAC-391 upgrade to spring 3 (#413)
* removing versions list to make upgrading easier

* cleaning build.gradle

* temp commit

* fix

* dependency fixes

* fix

* fix

* readding removed dependencies

* bumping to spring 3.5

* bumping to spring 3.5

* mockbean fix

* check fixes

* Revert "check fixes"

This reverts commit 187a6c7084918ee949d93f16538dff945d123530.

* Revert "mockbean fix"

This reverts commit 445e2187ef53bcebf16dd6e903b6e681a31e8d16.

* Revert "bumping to spring 3.5"

This reverts commit 59d411b297bc59069cc0216f64a4588863980042.

* Revert "bumping to spring 3.5"

This reverts commit 2056ca7e1e398a57fbf2e4af2293b2c28c0a38f5.

* springboot 3.0 -> 3.1

* springboot -> 3.2

* springboot -> 3.3

* springboot -> 3.4

* springboot -> 3.5

* checkstyle fix

* bumping minor upgrades

* bumping other upgrades

* bumping to java 21 via openrewrite

* swagger.yml sonar fix

* ccd scenario runner fix

* build gradle clean

* removing openrewrite

* dropping dependencycheck version

* pmd dir fix

* pact gradle plugin bump

* cleaning build.gradle

* bumping serenity

* minor improvement

* minor improvement

* minor improvement to lombok build

* bumping java-logging attempt

* pulling from master

* making applciation.yaml easier to compare

* fixing cache issue

* Revert "fixing cache issue"

This reverts commit ca64a0d2a1925a491e348b439c8eedf08f491b44.

* fixing cache issue

* temp commit

* checkstyle

* improvements

* checkstyle

* further improvement

* further improvement

* further improvement

* further improvement

* clean up

* clean up

* clean up

* future fix

* future fix

* adding function test report

* event test improvement

* fix

* versions bump and clean up

* versions bump and clean up

* versions bump and clean up

* improving CcdScenarioRunnerTest

* improving CcdScenarioRunnerTest

* better jackson management

* better serenity management

* better serenity management

* fix

* adding local suppression file back

* dropping broken uk.